--- a/package.json
+++ b/package.json
@@ -8,11 +8,17 @@
   },
   "dependencies": {
     "element-plus": "^1.0.2-beta.33",
+    "js-cookie": "^2.2.1",
+    "normalize.css": "^8.0.1",
+    "path-to-regexp": "^6.2.0",
     "vue": "^3.0.5",
     "vue-router": "^4.0.4",
     "vuex": "^4.0.0"
   },
   "devDependencies": {
+    "@rollup/plugin-alias": "^3.1.2",
+    "@types/js-cookie": "^2.2.6",
+    "@types/node": "^14.14.33",
     "@typescript-eslint/eslint-plugin": "^4.17.0",
     "@typescript-eslint/parser": "^4.17.0",
     "@vitejs/plugin-vue": "^1.1.5",
