--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
   },
   "dependencies": {
     "axios": "^0.21.1",
+    "dayjs": "^1.10.4",
     "element-plus": "^1.0.2-beta.33",
     "js-cookie": "^2.2.1",
     "js-md5": "^0.7.3",
