--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "serve": "vite preview"
   },
   "dependencies": {
+    "@vue/eslint-config-prettier": "^6.0.0",
     "axios": "^0.21.1",
     "dayjs": "^1.10.4",
     "element-plus": "^1.0.2-beta.33",
